fixed spacing issue for ticker list

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -159,3 +159,6 @@ body {
     }
   }
   
+  .allocation {
+    margin-top: 25px;
+  }
